<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCFF7"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="match_parent"
                android:text="Sign Up Here"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:textStyle="bold"
                android:layout_height="match_parent"/>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"


            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="text"
                android:drawableEnd="@drawable/ic_baseline_account_circle_24"
                android:drawableTint="@color/purple_500"
                android:hint="Enter your username"
                android:id="@+id/username"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:id="@+id/email"
                android:inputType="text"
                android:drawableEnd="@drawable/ic_baseline_email_24"
                android:drawableTint="@color/purple_500"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
        


            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="number"
                android:drawableTint="@color/purple_500"
                android:hint="@string/enter_your_phone_number"
                android:id="@+id/phone_number"
                android:drawableEnd="@drawable/ic_baseline_phone_24"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/password"
            app:endIconTint="@color/purple_500"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/password1"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_margin="20dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/purple_500"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/confirm_pasword"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"
            android:layout_margin="20dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            />

        <TextView
            android:layout_width="match_parent"
            android:text="Already have an account? | Login"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:layout_height="match_parent"/>

    </LinearLayout>



</ScrollView>


